# snake

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  msnake_workspace.code-workspace  snake_workspace.code-workspace
gui/: CMakeLists.txt  gamestartoptionswidget.ui  inputname.ui  mainmenuscreen.ui  screenscores.ui
menu/: CMakeLists.txt
menu/gamescreen/: CMakeLists.txt  gamescreen.cpp  gamescreen.h
menu/gamestartoptionswidget/: CMakeLists.txt  gamestartoptionswidget.cpp  gamestartoptionswidget.h
menu/inputname/: CMakeLists.txt  inputname.cpp  inputname.h
menu/screencontroller/: CMakeLists.txt  screencontroller.cpp  screencontroller.h
menu/screenscores/: CMakeLists.txt  screenscores.cpp  screenscores.h
menu/startwidget/: CMakeLists.txt  startwidget.cpp  startwidget.h  startwidget.ui
model/: CMakeLists.txt
model/elixir/: CMakeLists.txt  elixir.cpp  elixir.h
model/food/: CMakeLists.txt  food.cpp  food.h
model/gamecontroller/: CMakeLists.txt  gamecontroller.cpp  gamecontroller.h
model/item/: CMakeLists.txt  item.cpp  item.h
model/maze/: CMakeLists.txt  maze.cpp  maze.h
model/maze/typeofmozes/: 3.txt  4.txt  5.txt  6.txt  CMakeLists.txt  Без бортов.txt  Лабиринт 1.txt  Лабиринт 2.txt  С бортами.txt  Тип 1  Тип 6
model/scoremodel/: CMakeLists.txt  scoremodel.cpp  scoremodel.h
model/snake/: CMakeLists.txt  snake.cpp  snake.h
view/: CMakeLists.txt  view.cpp  view.h  view.ui
